# lumen

./: .dockerignore  .gitignore  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  README.md  ROADMAP.md  SECURITY.md  book.toml  config.example.toml  deny.toml
.claude/agents/: code-reviewer.md  docs-writer.md  perf-auditor.md  provider-integrator.md  test-writer.md
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml  question.yml
.github/workflows/: ci.yml  docs.yml  fuzz.yml  release.yml
.superpowers/sdd/: progress.md
bench/: README.md  compose.yaml  ferrogate-bench.toml  k6-added-latency.js  litellm-bench.yaml  lumen-bench.toml  mock-upstream.json  run.sh
bench/results/20260715T134031Z/: direct.summary.json  docker-stats-idle.txt  litellm.stats-under-load.txt  litellm.summary.json  lumen.stats-under-load.txt  lumen.summary.json  report.md
bench/results/20260715T231135Z/: direct.summary.json  docker-stats-idle.txt  image-digests.txt  litellm.stats-under-load.txt  litellm.summary.json  lumen.stats-under-load.txt  lumen.summary.json  report.md
crates/auth/: Cargo.toml
crates/auth/migrations/: 0001_init.sql  0002_model_used.sql  0003_media_usage.sql  0004_provider.sql  0005_key_deleted_at.sql  0006_token_breakdown.sql  0007_budget_groups.sql
crates/auth/src/: crypto.rs  error.rs  key.rs  lib.rs  state.rs  store.rs  usage.rs
crates/auth/tests/: enforce.rs  groups.rs  store.rs  usage_writer.rs
crates/core/: Cargo.toml
crates/core/src/: capability.rs  chat.rs  content.rs  embed.rs  error.rs  lib.rs  media.rs  provider.rs  rerank.rs  tokens.rs
crates/providers/: Cargo.toml
crates/providers/src/: batch.rs  chat.rs  http.rs  image_fetch.rs  kind.rs  lib.rs  mapping.rs  registry.rs  rerank.rs  sse.rs
crates/providers/src/anthropic/: mod.rs  stream.rs
crates/providers/src/azure/: mod.rs
crates/providers/src/bedrock/: embed.rs  eventstream.rs  mod.rs  sigv4.rs  stream.rs
crates/providers/src/cloudflare/: mod.rs
crates/providers/src/cohere/: chat.rs  mod.rs  stream.rs
crates/providers/src/google/: embed.rs  mod.rs  stream.rs
crates/providers/src/google/vertex/: auth.rs  embed.rs  mod.rs
crates/providers/src/google/vertex/testdata/: test_private_key.pem
crates/providers/src/jina/: mod.rs
crates/providers/src/mistral/: mod.rs
crates/providers/src/mixedbread/: mod.rs
crates/providers/src/nvidia/: mod.rs
crates/providers/src/ollama/: mod.rs
crates/providers/src/openai/: mod.rs
crates/providers/src/pinecone/: mod.rs
crates/providers/src/tei/: mod.rs
crates/providers/src/together/: mod.rs
crates/providers/src/voyage/: mod.rs
crates/providers/tests/: azure_openai.rs  bedrock.rs  cloudflare_rerank.rs  cohere_chat.rs  embeddings.rs  google_chat.rs  image_fetch.rs  multimodal_embeddings.rs  rerank.rs  rerank_wire.rs  vertex_ai.rs
crates/router/: Cargo.toml
crates/router/src/: circuit.rs  executor.rs  lib.rs  peek.rs  retry.rs
crates/server/: Cargo.toml
crates/server/benches/: gateway_overhead.rs  stream_ttfb.rs
crates/server/src/: accounting.rs  admin.rs  app.rs  auth.rs  chat.rs  config.rs  embeddings.rs  error.rs  health.rs  lib.rs  lifecycle.rs  main.rs  metadata.rs  models.rs  pricing.rs  reload.rs  rerank.rs  resilience.rs  routes.rs  state.rs  tokenizer.rs
crates/server/tests/: accurate_tokens.rs  admin_grants.rs  admin_groups.rs  admin_usage.rs  auth.rs  chat.rs  check_config.rs  embeddings.rs  errors.rs  http.rs  keys_cli.rs  latency.rs  models.rs  reload.rs  rerank.rs  resilience.rs  route_fallback.rs  shutdown.rs  signal_shutdown.rs
crates/server/tests/common/: mod.rs
crates/telemetry/: Cargo.toml
crates/telemetry/src/: latency.rs  lib.rs  logging.rs  metrics.rs  reload.rs  resilience.rs  tokens.rs
docs/: SUMMARY.md  backlog.md  contributing.md  errors.md  examples.md  introduction.md  perf-baseline.md  providers.md
docs/adr/: 001-crate-and-lib-naming.md  002-request-metadata-header.md  003-token-accounting.md  004-streaming-passthrough.md  005-resilience-execution.md  006-client-cancellation-error-code.md  007-accounting-refinements.md  008-hot-reload-auth-and-db-key-rotation.md  009-shared-parent-budgets.md
docs/chat/: completions.md  streaming.md  tool-calling.md  vision.md
docs/embeddings/: batching.md  embeddings.md  multimodal.md
docs/getting-started/: configuration.md  installation.md  quickstart.md
docs/operations/: deployment.md  keys-budgets.md  logging.md  metrics.md  resilience.md  token-accounting.md  upgrades.md  usage-log.md
docs/reranking/: reranking.md
docs/superpowers/plans/: 2026-07-14-vision-image-input.md  2026-07-15-docs-restructure.md
docs/superpowers/specs/: 2026-07-14-multimodal-embeddings-design.md  2026-07-14-vision-image-input-design.md
examples/: README.md
examples/minimal-chat/: README.md  config.toml  run.sh
examples/multi-provider-fallback/: README.md  config.toml  run.sh
examples/multi-tenant-analytics/: README.md  config.toml  run.sh
examples/rag-pipeline/: README.md  config.toml  run.sh
examples/self-hosted/: README.md  config.toml  run.sh
fuzz/: .gitignore  Cargo.toml  README.md
fuzz/fuzz_targets/: anthropic_translate_request.rs  anthropic_translate_response.rs  chat_request.rs  google_translate_request.rs  google_translate_response.rs  sse_parser.rs
monitoring/: .env.example  README.md  compose.yaml  lumen.toml  smoke.py  traffic.py
monitoring/grafana/dashboards/: lumen-gateway.json
monitoring/grafana/provisioning/dashboards/: dashboards.yml
monitoring/prometheus/: alerts.yml  prometheus.yml
specs/: 00-vision.md
specs/design/: 2026-07-14-multimodal-embeddings-design.md  2026-07-15-docs-restructure-design.md
specs/milestones/: M1-skeleton.md  M2-embeddings.md  M3-rerank-models.md  M4-chat-streaming.md  M5-auth-budgets.md  M6-resilience.md  M7-release.md
