[workspace]
resolver = "2"
members = [
    "crates/core",
    "crates/providers",
    "crates/router",
    "crates/auth",
    "crates/telemetry",
    "crates/server",
]

[workspace.package]
version = "0.2.0"
edition = "2021"
rust-version = "1.88"
license = "Apache-2.0"
repository = "https://github.com/qdequele/lumen"
authors = ["LUMEN contributors"]

[workspace.dependencies]
# Internal crates. Package names are bare (`core`, `server`, ...) so the
# documented `cargo run -p server` commands work; the `lumen-*` keys keep
# imports unambiguous (`use lumen_core::...`).
lumen-core = { path = "crates/core", package = "core" }
lumen-providers = { path = "crates/providers", package = "providers" }
lumen-router = { path = "crates/router", package = "router" }
lumen-auth = { path = "crates/auth", package = "auth" }
lumen-telemetry = { path = "crates/telemetry", package = "telemetry" }

# Async runtime & web
tokio = { version = "1.40", features = ["rt-multi-thread", "macros", "signal", "sync", "time"] }
tokio-util = { version = "0.7", features = ["rt"] }
axum = { version = "0.8", default-features = false, features = ["http1", "http2", "json", "query", "tokio", "matched-path"] }
tower = { version = "0.5", features = ["util"] }
tower-http = { version = "0.6", features = ["trace", "limit", "request-id", "util"] }
hyper = "1.5"
futures = "0.3"
async-trait = "0.1"
bytes = "1.8"

# HTTP client (rustls, never openssl)
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "json", "stream"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
base64 = "0.22"

# Errors
thiserror = "2"
anyhow = "1"

# GCP service-account OAuth (Vertex AI): RS256-signed JWT assertion. Pure-Rust
# crypto backend (ring), never OpenSSL - compatible with the rustls-only policy.
jsonwebtoken = { version = "9", default-features = false, features = ["use_pem"] }

# Logging / metrics
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json", "fmt"] }
prometheus = { version = "0.13", default-features = false }

# Config
figment = { version = "0.10", features = ["toml", "env"] }
notify = "7"

# Concurrency / data structures
arc-swap = "1"
dashmap = "6"

# Tokenization (opt-in accurate per-model token counting, ADR 003). Pure Rust,
# no C toolchain, no openssl - honors the rustls-only mandate.
tiktoken-rs = "0.12"

# Storage & crypto (M5: virtual keys, budgets, usage log)
sqlx = { version = "0.9", default-features = false, features = ["runtime-tokio", "sqlite", "migrate", "macros", "derive"] }
blake3 = "1"
aes-gcm = "0.10"
rand = "0.9"
zeroize = "1"

# SigV4 request signing (AWS Bedrock). Pure-Rust, rustls-compatible, no OpenSSL.
sha2 = "0.10"
hmac = "0.12"
hex = "0.4"

# Testing
wiremock = "0.6"
criterion = { version = "0.5", features = ["async_tokio"] }
tempfile = "3"
# Real-signal integration tests only (crates/server/tests): sending an actual
# SIGTERM/SIGINT to a spawned child process, cfg(unix)-gated.
libc = "0.2"

[workspace.lints.rust]
# `cargo fuzz` sets `--cfg fuzzing` across the whole dependency graph so the
# fuzz-only shims in crates/providers (anthropic::fuzzing, google::fuzzing)
# can reach the private translate_request/translate_response functions
# without widening their normal-build visibility. Declare the cfg so
# `unexpected_cfgs` doesn't flag it under `cargo clippy -D warnings`.
unexpected_cfgs = { level = "warn", check-cfg = ["cfg(fuzzing)"] }

[workspace.lints.clippy]
# Pedantic is on across the workspace (CLAUDE.md rule 6).
pedantic = { level = "warn", priority = -1 }
# ...minus a few lints that fight the house style without adding safety.
module_name_repetitions = "allow"
missing_errors_doc = "allow"
missing_panics_doc = "allow"
must_use_candidate = "allow"
doc_markdown = "allow"

[profile.release]
lto = "thin"
codegen-units = 1
panic = "abort"
strip = true
opt-level = 3
