# cargo-fuzz crate (M7 §7.4). Its own workspace so the main workspace's
# `cargo build/clippy/test --workspace` and `cargo fmt` never touch it (it needs
# nightly + libfuzzer). Run with: `cargo +nightly fuzz run <target>`.
[package]
name = "ferrogate-fuzz"
version = "0.0.0"
publish = false
edition = "2021"

[package.metadata]
cargo-fuzz = true

[dependencies]
libfuzzer-sys = "0.4"
serde_json = "1"
ferrogate-core = { path = "../crates/core", package = "core" }
ferrogate-providers = { path = "../crates/providers", package = "providers" }

[[bin]]
name = "sse_parser"
path = "fuzz_targets/sse_parser.rs"
test = false
doc = false
bench = false

[[bin]]
name = "chat_request"
path = "fuzz_targets/chat_request.rs"
test = false
doc = false
bench = false

# Standalone workspace: keep the fuzz crate out of the main build graph.
[workspace]
