[package]
name = "auth"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
description = "Virtual keys, quotas and hard budgets for Ferrogate."

[lib]
name = "ferrogate_auth"
path = "src/lib.rs"

[dependencies]
ferrogate-core = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
tokio = { workspace = true }

[lints]
workspace = true
