[package]
name = "auth"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
description = "Virtual keys, quotas and hard budgets for Ferrogate."

[lib]
name = "ferrogate_auth"
path = "src/lib.rs"

[dependencies]
ferrogate-core = { workspace = true }
tracing = { workspace = true }
thiserror = { workspace = true }
serde = { workspace = true }
sqlx = { workspace = true }
blake3 = { workspace = true }
aes-gcm = { workspace = true }
rand = { workspace = true }
zeroize = { workspace = true }
dashmap = { workspace = true }
tokio = { workspace = true }

[dev-dependencies]
tokio = { workspace = true, features = ["test-util"] }
serde_json = { workspace = true }

[lints]
workspace = true
