[package]
name = "core"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
description = "Shared types, capability traits and error taxonomy for LUMEN."

[lib]
name = "lumen_core"
path = "src/lib.rs"

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
base64 = { workspace = true }
bytes = { workspace = true }
thiserror = { workspace = true }
async-trait = { workspace = true }
futures = { workspace = true }
tokio-util = { workspace = true }

[dev-dependencies]
serde_json = { workspace = true }

[lints]
workspace = true
