[package]
name = "providers"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
description = "Provider implementations (OpenAI, Anthropic, Cohere, Ollama, TEI, ...) for Ferrogate."

[lib]
name = "ferrogate_providers"
path = "src/lib.rs"

[dependencies]
ferrogate-core = { workspace = true }
reqwest = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
async-trait = { workspace = true }
futures = { workspace = true }
tokio = { workspace = true }
tokio-util = { workspace = true }
arc-swap = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
wiremock = { workspace = true }

[lints]
workspace = true
