[package]
name = "router"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
description = "Model-to-provider resolution, fallback and load balancing for Ferrogate."

[lib]
name = "ferrogate_router"
path = "src/lib.rs"

[dependencies]
ferrogate-core = { workspace = true }
ferrogate-providers = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
tokio = { workspace = true }

[lints]
workspace = true
