[package]
name = "router"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
description = "Model-to-provider resolution, fallback and load balancing for Ferrogate."

[lib]
name = "ferrogate_router"
path = "src/lib.rs"

[dependencies]
ferrogate-core = { workspace = true }
ferrogate-providers = { workspace = true }
ferrogate-telemetry = { workspace = true }
tokio = { workspace = true }
tokio-util = { workspace = true }
futures = { workspace = true }
dashmap = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
tokio = { workspace = true, features = ["rt-multi-thread", "macros", "test-util"] }
reqwest = { workspace = true }

[lints]
workspace = true
