[package]
name = "server"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
description = "LUMEN HTTP server binary (axum, SSE, config, hot reload)."
default-run = "lumen"

[[bin]]
name = "lumen"
path = "src/main.rs"

[lib]
name = "lumen_server"
path = "src/lib.rs"

[dependencies]
lumen-core = { workspace = true }
lumen-telemetry = { workspace = true }
lumen-providers = { workspace = true }
lumen-router = { workspace = true }
lumen-auth = { workspace = true }

tokio = { workspace = true }
tokio-util = { workspace = true }
axum = { workspace = true }
tower = { workspace = true }
tower-http = { workspace = true }
hyper = { workspace = true }
futures = { workspace = true }
bytes = { workspace = true }
dashmap = { workspace = true }
arc-swap = { workspace = true }
reqwest = { workspace = true }

serde = { workspace = true }
serde_json = { workspace = true }

thiserror = { workspace = true }
anyhow = { workspace = true }

tracing = { workspace = true }
tracing-subscriber = { workspace = true }

figment = { workspace = true }
notify = { workspace = true }
zeroize = { workspace = true }
tiktoken-rs.workspace = true

[dev-dependencies]
reqwest = { workspace = true }
tokio = { workspace = true, features = ["rt-multi-thread", "macros", "signal", "sync", "time", "test-util", "net", "io-util"] }
figment = { workspace = true, features = ["test"] }
wiremock = { workspace = true }
serde_json = { workspace = true }
criterion = { workspace = true }
async-trait = { workspace = true }
tempfile = { workspace = true }

[target.'cfg(unix)'.dev-dependencies]
# tests/resilience.rs (fd-limit raise for the 429 storm) and
# tests/signal_shutdown.rs (send a real SIGTERM/SIGINT to a spawned `lumen`
# child process).
libc = { workspace = true }

[[bench]]
name = "gateway_overhead"
harness = false

[[bench]]
name = "stream_ttfb"
harness = false

[lints]
workspace = true
